z-index bug fix

--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ section{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100%;
+    z-index: 100;
 }
 
 .header.sticky {
